opam-version: "2.0"
maintainer: "frederic.bour@lakaban.net"
authors: [
  "Jérémie Dimino <jeremie@dimino.org>"
]
license: "LGPL-2.1"
homepage: "https://github.com/let-def/ocaml-migrate-parsetree"
bug-reports: "https://github.com/let-def/ocaml-migrate-parsetree/issues"
dev-repo: "git+https://github.com/let-def/ocaml-migrate-parsetree.git"
tags: [ "syntax" "org:ocamllabs" ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.6.0"}
  "ocaml-migrate-parsetree"
  "ocamlbuild"
  "ocaml" {>= "4.02.3"}
]
synopsis: "Ocamlbuild plugin for ocaml-migrate-parsetree"
description: """
This package provides an ocamlbuild plugin that can be used to produce
optimized on-demand statically linked ppx drivers, as Dune does
by default.
"""
