(library
 (name migrate_parsetree)
 (public_name ocaml-migrate-parsetree)
 (libraries compiler-libs.common)
 (preprocess (action (run %{exe:../tools/pp.exe} %{read:ast-version} %{input-file})))
 (ppx.driver
  (main       Migrate_parsetree.Driver.run_main)
  (flags      --dump-ast)
  (lint_flags --null)))

(rule
 (copy#
  compiler-functions/%{read:compiler-functions-file}
  migrate_parsetree_compiler_functions.ml))

(rule
 (targets ast-version compiler-functions-file)
 (action  (run %{ocaml} %{dep:config/gen.ml} %{ocaml_version})))
