(library
 (name migrate_parsetree)
 (public_name ocaml-migrate-parsetree)
 (libraries compiler-libs.common)
 (preprocess (action (run %{exe:../tools/pp.exe} %{read:ast-version} %{input-file})))
 (ppx.driver
  (main       Migrate_parsetree.Driver.run_main)
  (flags      --dump-ast)
  (lint_flags --null)))

(rule
 (targets ast-version)
 (action  (run %{ocaml} %{dep:config/gen.ml} %{ocaml_version})))
